# unified_creek_awos

./: README.md  autorun.txt  awos.py  awos_refined.py  check_image_size.py  data.csv  display_manager.py  karachi_sun_data.csv  pyproject.toml  requirements.txt  start_awos.sh  weather_station.ini
aqi/: karachi_aqi_data_with_pst.csv  openmeto.py
awos_assit_code/: awos copy.py  awos_new.py  awos_refined.py  check_image_size.py  generate_sun_data.py  widget_positioner.py  widget_positions.py
csv_data/: weather_data_2025-05-25.csv  weather_data_2025-05-26.csv  weather_data_2025-05-27.csv  weather_data_2025-05-31.csv  weather_data_2025-07-01.csv  weather_data_2025-07-02.csv  weather_data_2025-07-03.csv  weather_data_2025-07-04.csv  weather_data_2025-07-05.csv  weather_data_2025-07-06.csv  weather_data_2025-07-07.csv  weather_data_2025-07-08.csv
test_awos/: test_gui.py
